<resources>
    <string name="app_name">Syllego</string>
    <string name="add_a_book_message">Add a Book</string>
    <string name="book_name">Book Name</string>
    <string name="author">Author</string>
    <string name="year_released">Year Released</string>
    <string name="isbn">ISBN</string>
    <string name="completed">Completed</string>
    <string name="pending">Pending</string>
    <string name="dropped">Dropped</string>
    <string name="add_book">Add Book</string>
    <string name="edit_book_information">Edit Book Information</string>
    <string name="edit">Edit</string>
    <string name="edit_book">Edit Book</string>
    <string name="BookNameEmptyError">Book name field is empty!</string>
    <string name="BookAuthorEmptyError">Book Author field is empty!</string>
    <string name="YearReleasedEmptyError">Year Released field is empty!</string>
    <string name="ISBNEmptyError">ISBN field is empty! </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="scan_bar_code">Scan ISBN Bar Code</string>
    <string name="no_connection_error">Could not connect to application servers. Please check your connection and try again!</string>
    <string name="sign_out">Sign Out</string>
    <string name="help">Help</string>
    <string name="show_history">Show History</string>
    <string name="home_back_button_prompt">Tap the back button again to exit.</string>
    <string name="delete_prompt_question">Delete this book from your catalog?</string>

    <string name="title_activity_splash_screen">activity_splash_screen</string>
    <string name="my_library">My Library</string>
    <string name="activity_history">Activity History</string>
    <string name="add_a_book">Add a book</string>
    <string name="subtitle">Your Personal Book Catalogue.</string>
    <string name="view_profile">View Profile</string>
    <string name="copies_available">Copies Available</string>
</resources>
