<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/AddItem"
        android:enabled="true"
        android:icon="@drawable/ic_action_new"
        android:title="Item"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/ViewProfile"
        android:enabled="true"
        android:title="@string/view_profile"
        android:visible="true" />

    <item
        android:id="@+id/ShowHistory"
        android:enabled="true"
        android:title="@string/show_history"
        android:visible="true" />

    <item
        android:id="@+id/ViewTransaction"
        android:enabled="true"
        android:title="View Transactions"
        android:visible="true" />

    <item
        android:id="@+id/SignOutButton"
        android:enabled="true"
        android:title="@string/sign_out"
        android:visible="true" />



</menu>